--- a/myStyles/myStyle.css
+++ b/myStyles/myStyle.css
@@ -19,7 +19,7 @@ section{
     background: #262626;
     color:#fff;
 }
-
+/*Css Styling for night mode Button*/
 .onoffswitch {
     position: absolute; 
     width: 90px; 
@@ -68,7 +68,9 @@ section{
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
     right: 0px; 
 }
+/* CSS Styling for night mode button ends*/
 
+/* CSS For bootstrap cards */
 .card-title{
     text-align: center;
 }
@@ -79,6 +81,7 @@ a.custom-card{
 a.custom-card:hover{
     color:inherit;
 }
+/* Css for bootstrap cards end */
 
 body.snake{
     height:100%;
@@ -89,4 +92,10 @@ div.wrap{
     padding-top:65px;
     height:100%;
     overflow:hidden;
+}
+
+#resume{
+    display:table; 
+    margin-left:auto; 
+    margin-right:auto;
 }
